--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   uuid: ^4.2.1
   flutter_riverpod: ^2.4.8
   image_picker: ^1.0.4
+  location: ^5.0.3
+  http: ^1.1.0
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
